Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/Region_Product_Line_Target__c.object-meta.xml
<CustomObject>
    <label>Region Product Line Target</label>
    <nameField>
        <displayFormat>RPLT-{0000}</displayFormat>
        <label>Region Product Line Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Product Line Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>