Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Base_Target_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Base_Target_Achieved__c</fullName>
    <formula>IF( Total_Opportunity_Amount__c = 0, 0, Won_Revenue__c / Base_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>