Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Base_Target_Achieved_Create__c.field-meta.xml
<CustomField>
    <fullName>Base_Target_Achieved_Create__c</fullName>
    <formula>IF( Pipeline_Created__c =0,0,( Pipeline_Created__c / Base_Target_Create__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>