Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Base_Target_Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Target_Variance_Amount__c</fullName>
    <formula>Won_Revenue__c - Base_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Target Variance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>