Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Base_Target_Variance_Amount_Create__c.field-meta.xml
<CustomField>
    <fullName>Base_Target_Variance_Amount_Create__c</fullName>
    <formula>Pipeline_Created__c - Base_Target_Create__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Target Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>