Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Base_Target_Variance_Quantity_Create_Qty__c.field-meta.xml
<CustomField>
    <fullName>Base_Target_Variance_Quantity_Create_Qty__c</fullName>
    <formula>Pipeline_Created_Qty__c - Base_Target_Create_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Target Variance Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>