Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Commit_as_of_Base_Target_Qty__c.field-meta.xml
<CustomField>
    <fullName>Commit_as_of_Base_Target_Qty__c</fullName>
    <formula>IF( Commit_Quantity__c=0,0,(Commit_Quantity__c / Base_Target_Qty__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commit as % of Base Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>