Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Commit_as_of_Stretch_Target_Qty__c.field-meta.xml
<CustomField>
    <fullName>Commit_as_of_Stretch_Target_Qty__c</fullName>
    <formula>IF( Commit_Quantity_Stretch__c =0,0,( Commit_Quantity_Stretch__c / Stretch_Target_Qty__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commit as % of Stretch Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>