Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Commit_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Commit_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commit Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>