Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Forecast_Base_Target_Achievement_Qty__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Base_Target_Achievement_Qty__c</fullName>
    <formula>IF( Total_Forecast_Quantity__c =0,0,( Total_Forecast_Quantity__c / Base_Target_Qty__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Base Target Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>