Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/int_Month__c.field-meta.xml
<CustomField>
    <fullName>int_Month__c</fullName>
    <formula>TRIM(LEFT(TEXT(Month__c), 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>int Month</label>
    <type>Text</type>
</CustomField>