Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Pipeline_Created__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Created__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pipeline Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>