Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Reg_PLT__c.field-meta.xml
<CustomField>
    <fullName>Reg_PLT__c</fullName>
    <formula>TEXT( Region__c ) &amp;
&quot;-&quot; &amp;
Product_Line__c &amp;
&quot;-&quot; &amp;
TEXT( Year__c )&amp;
&quot;-&quot; &amp;
RIGHT(TEXT( Month__c ),3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg-PLT</label>
    <type>Text</type>
</CustomField>