Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Stretch_Target_Achieved_Create_Qty__c.field-meta.xml
<CustomField>
    <fullName>Stretch_Target_Achieved_Create_Qty__c</fullName>
    <formula>IF( Pipeline_Created_Qty_Stretch__c =0,0,( Pipeline_Created_Qty_Stretch__c / Stretch_Target_Create_Qty__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stretch Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>