Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Stretch_Target_Qty__c.field-meta.xml
<CustomField>
    <fullName>Stretch_Target_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Stretch Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>