Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Total_Forecast_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast_Quantity__c</fullName>
    <formula>Won_Quantity__c + Commit_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Forecast Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>