Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Total_Forecast_Revenue_Stretch__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast_Revenue_Stretch__c</fullName>
    <formula>Total_Forecast_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Forecast Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>