Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Won_Quantity_Stretch__c.field-meta.xml
<CustomField>
    <fullName>Won_Quantity_Stretch__c</fullName>
    <formula>Won_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>