Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Won_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Won_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Won Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>