Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target__c/fields/Won_Revenue_Stretch__c.field-meta.xml
<CustomField>
    <fullName>Won_Revenue_Stretch__c</fullName>
    <formula>Won_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>